--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,12 +1,17 @@
 body
 {
+    background: #1e1f24;
     color: #333;
-    text-align: left;
+    text-align: center;
     font-family: "Arial";
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
 }
 
-#cabecera {
-    background: #33A;
+#cabecera
+{
+    background: #37488b;
     box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
     color: white;
     font-weight: bold;
@@ -14,7 +19,14 @@ body
     padding: 0.5em;
 }
 
-#cabecera #tagline {
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
+}
+
+#cabecera #tagline
+{
     margin: 0 0 0 1em;
     font-weight: normal;
     font-size: 0.8em;
@@ -30,4 +42,10 @@ body
 
 #container h1 {
     font-size: 20px; 
+}
+
+#post
+{
+    background: white;
+    padding: 1em;
 }
